refactor: PerspectiveService 클린 코드 적용 및 추상화 단계 최적화
- isHarmful 메인 로직의 추상화 수준을 통일하여 가독성 향상
- Optional을 활용한 점수 추출 로직 개선으로 Null 안정성 확보
- 매직 리터럴(Threshold, Lang)을 상수로 치환하여 유지보수성 개선
- 코드 내 중첩된 조건문을 가드 클로저(Guard Clause) 패턴으로 평탄화
- 서킷 브레이커 감지를 위해 내부 예외 처리 흐름 정비